[gd_scene load_steps=4 format=3 uid="uid://ctrhxoiwn1vug"]

[ext_resource type="PackedScene" uid="uid://t0cvaldpu21j" path="res://characters/player/spaceship.tscn" id="1_kfedo"]
[ext_resource type="PackedScene" uid="uid://dgx8jwni6c5bh" path="res://levels/level_01/background.tscn" id="1_rkwq2"]
[ext_resource type="Script" path="res://scripts/enemies/asteroids/spawn_asteroids.gd" id="2_ap2p0"]

[node name="world_scene_01" type="Node2D"]

[node name="background_level_01" parent="." instance=ExtResource("1_rkwq2")]

[node name="spawn_asteroids" type="Node2D" parent="."]
script = ExtResource("2_ap2p0")

[node name="spawn_asteroids_timer" type="Timer" parent="spawn_asteroids"]

[node name="spawn_bullets" type="Node2D" parent="."]

[node name="spawn_bullet_prepare" type="Node2D" parent="."]

[node name="ship" parent="." instance=ExtResource("1_kfedo")]
position = Vector2(326, 301)

[connection signal="timeout" from="spawn_asteroids/spawn_asteroids_timer" to="spawn_asteroids" method="on_spawn_asteroids_timer_timeout"]
